disabled/apps/cloudshell/ingress.yaml
---
# Copyright 2023 Logicalis UKI. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0. Previously licensed under the Functional Source License (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://github.com/logicalisuki/ubiquity-open/blob/main/LICENSE
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# This software was previously licensed under the Functional Source License but has now transitioned to an Apache 2.0 License
# as of June 2025.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudshell-ingress
  annotations:
    cert-manager.io/cluster-issuer: pebble-issuer
    hajimari.io/appName: cloudshell
    hajimari.io/icon: shell
spec:
  ingressClassName: nginx
  rules:
  - host: &host cloudshell.10-212-87-201.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudshell
            port:
              number: 3000
  tls:
  - hosts:
      - *host
    secretName: "cloudshell-general-tls"
